# photon-mapping

./: CMakeLists.txt  README.md  main.cpp
include/: camera.h  geometry.h  image.h  integrator.h  light.h  material.h  photon_map.h  primitive.h  sampler.h  scene.h  triangle.h
